# plan-B

./: README.md  decrypt.py  pyproject.toml
secretfiles/: mails.txt.enc  script.7z.enc
src/cryptex/application/: dtos.py
src/cryptex/application/ports/: crypto_engine.py  file_repository.py  key_deriver.py  password_provider.py
src/cryptex/application/use_cases/: decrypt_file.py  encrypt_file.py  padding.py
src/cryptex/domain/: exceptions.py  value_objects.py
src/cryptex/infrastructure/cli/: password_provider.py
src/cryptex/infrastructure/crypto/: aes_gcm_engine.py
src/cryptex/infrastructure/io/: file_repository.py
src/cryptex/infrastructure/kdf/: scrypt_deriver.py
src/cryptex/presentation/cli/: app.py
tests/integration/: test_crypto_pipeline.py  test_payload_sizes.py
tests/unit/application/: test_use_cases.py  test_use_cases_errors.py
tests/unit/domain/: test_value_objects.py  test_value_objects_extra.py
tests/unit/infrastructure/: test_infrastructure_errors.py
tests/unit/presentation/: test_cli_app.py
